Order form fue actualizada para obtener la fecha en formato dia/mes/año

--- a/src/components/GoOrder/Cotiza/styles.scss
+++ b/src/components/GoOrder/Cotiza/styles.scss
@@ -153,6 +153,7 @@
 #btn-continue:disabled {
   background-color: gray;
   box-shadow: none;
+  cursor: default;
 }
 #btn-back {
   background-color: transparent;
