Header con useEffect de actualizar ordenes pendientes y su cantidad mostrarla

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -192,7 +192,7 @@
     background-size: contain;
     border-style: double;
     border-color: #77c6ca;
-    background-image: url('../../img/icons/cart.svg');
+    background-image: url('../../img/icons/casa.png');
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: center;
