--- a/src/components/InfoCuenta/InfoCuenta.scss
+++ b/src/components/InfoCuenta/InfoCuenta.scss
@@ -3,23 +3,68 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 90vw;
 
   &--desktop {
     margin: 10vh 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    
+  }
+
+  &__user-img {
+    width: 7rem;
+    height: 7rem;
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    background-color: #fff;
+    border-radius: 100%;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #77c6ca;
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 100%;
+    }
   }
 
   &__form {
     background-color: white;
     display: flex;
-    width: 90%;
+    width: 60rem;
     padding: 2rem;
     flex-direction: column;
     border-radius: 20px;
     box-shadow: 2px 2px 50px 2px rgba(0, 0, 0, 0.2);
+    position: relative;
+
+    &__change-photo {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      width: 80%;
+      position: absolute;
+
+      top: 130px;
+
+      transition: all 0.3s ease-out;
+      background-color: transparent;
+      pointer-events: none;
+      opacity: 0;
+
+      h4 {
+        margin-top: 1rem;
+      }
+    }
 
     &__group {
       margin: 15px 0 0 0;
@@ -29,6 +74,21 @@
       margin-bottom: 0.5rem;
       color: #929292;
       font-size: 1rem;
+    }
+    &__link {
+      text-align: center;
+      margin: 2rem 0 1rem 0;
+
+      a {
+        text-decoration: none;
+        color: #929292;
+        font-size: 1.2rem;
+      }
+      a:hover {
+        text-decoration: none;
+        color: black;
+        font-size: 1.2rem;
+      }
     }
 
     &__input {
@@ -73,14 +133,37 @@
   }
 }
 
+.is-active-change-photo {
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .info__img {
   display: none;
 }
-
+#file {
+  font-size: 1.2rem;
+  padding-right: 3rem;
+}
+.i-btn {
+  margin-left: -1px;
+  border: none;
+  cursor: pointer;
+}
+.password-btn {
+  margin-left: -25px;
+  border: none;
+  cursor: pointer;
+}
 .fa-eye,
 .fa-image {
-  margin-left: -25px;
-  cursor: pointer;
+  color: #929292;
+}
+
+#old-password,
+#new-password {
+  font-size: 1.2rem;
+  padding-right: 3rem;
 }
 
 @media screen and (min-width: 769px) {
@@ -103,6 +186,9 @@
     &__h5 {
       font-size: 1.7rem;
     }
+    &__change-photo {
+      top: 270px;
+    }
   }
 
   .info__img {
@@ -113,6 +199,19 @@
 }
 
 @media screen and (min-width: 1025px) {
+  .card__user-img {
+    width: 10vw;
+    height: 10vw;
+    max-width: 10rem;
+    max-height: 10rem;
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 100%;
+    }
+  }
   .card--desktop {
     margin-left: 20px;
   }
@@ -131,5 +230,15 @@
 
   .info__img {
     margin-right: 20px;
+  }
+  .password-btn {
+    margin-left: -15px;
+    border: none;
+    cursor: pointer;
+  }
+  .i-btn {
+    margin-left: -10px;
+    border: none;
+    cursor: pointer;
   }
 }
