--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -90,10 +90,10 @@
     border: 1px solid white;
     display: inline-block;
     transition: all 0.3s ease;
-    margin: 0 1rem;
+    margin: 0 10px;
   }
 
-  &__register {
+  /*   &__register {
     font-size: 1.5rem;
     text-decoration: none;
     padding: 5px;
@@ -103,7 +103,7 @@
     display: inline-block;
     transition: all 0.3s ease;
     margin: 0 1rem 0 0;
-  }
+  } */
 
   /* Menu perfil */
   &__perfil {
@@ -114,8 +114,8 @@
     width: 150px;
     position: absolute;
 
-    right: 70px;
-    bottom: 45px;
+    right: 0px;
+    bottom: 43px;
 
     transition: all 0.3s ease-out;
     background-color: #77c6ca;
