Added new routes

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,12 @@ body {
   height: 100%;
   background-color: #f0fefe;
 }
+.alert {
+  color: red;
+  position: fixed;
+  top: 0;
+  
+}
 
 #root {
   height: 100%;
