--- a/src/components/InfoCuenta/InfoCuenta.scss
+++ b/src/components/InfoCuenta/InfoCuenta.scss
@@ -148,6 +148,7 @@
 }
 .i-btn {
   color: green;
+  background-color: transparent;
   margin-left: -1px;
   border: none;
   position: absolute;
@@ -156,6 +157,7 @@
 }
 .i-btn:disabled {
   margin-left: -1px;
+  background-color: transparent;
   border: none;
   position: absolute;
   animation: none;
