--- a/src/components/PendingOrderCart/styles.scss
+++ b/src/components/PendingOrderCart/styles.scss
@@ -6,7 +6,9 @@
   width: auto;
   height: auto;
   background-color: rgb(119, 198, 201);
-  padding: 2rem;
+  padding: 2rem 2rem 6rem 2rem;
+  flex-grow: 1;
+
   .bag {
     width: 40px;
     height: 40px;
@@ -200,7 +202,6 @@
     width: auto;
     flex-grow: 1;
     height: auto;
-    min-height: 55rem;
     background-color: rgb(119, 198, 201);
     padding-bottom: 3rem;
 
