--- a/src/components/RegisterForm/RegisterForm.scss
+++ b/src/components/RegisterForm/RegisterForm.scss
@@ -3,14 +3,14 @@
 }
 
 .form_register {
-  min-height: 71rem;
+  min-height: 60rem;
   height: 100%;
   max-width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0rem 3rem 5rem 3rem;
+  padding: 0rem 3rem 4rem 3rem;
   background: rgb(119, 198, 201);
   background-repeat: repeat;
   background-attachment: fixed;
@@ -20,7 +20,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 0 0 1rem 0;
     &__img {
       width: 15rem;
       margin-bottom: 1rem;
@@ -106,6 +106,9 @@
 
 @media (min-width: 769px) {
   .form_register {
+    min-height: 70rem;
+    padding-bottom: 0;
+
     &__item {
       input {
         width: 30rem;
