--- a/src/components/GoOrder/OrderTime/styles.scss
+++ b/src/components/GoOrder/OrderTime/styles.scss
@@ -40,7 +40,7 @@
   .option-label-select-hour {
     width: 100%;
     border: none;
-    cursor: default;
+    cursor: pointer;
     font-size: 1.8rem;
   }
   .btn-time-slot {
@@ -50,6 +50,7 @@
       color: rgb(172, 172, 172);
       border: 2px solid rgb(172, 172, 172);
       background-color: rgb(241, 241, 241);
+      cursor: not-allowed;
     }
   }
 }
