--- a/src/components/PendingOrderCart/styles.scss
+++ b/src/components/PendingOrderCart/styles.scss
@@ -115,7 +115,7 @@
   &__footer {
     box-sizing: border-box;
     width: 100%;
-    height: 200px;
+    height: auto;
     z-index: 2;
     background-color: rgb(119, 198, 201);
 
