--- a/src/components/PaymentSuccess/styles.scss
+++ b/src/components/PaymentSuccess/styles.scss
@@ -1,11 +1,11 @@
-.action-success {
+.payment-success {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   max-width: 100vw;
   height: 100vh;
-  background-color: #77c6c9;
+  background-color: white;
   padding: 3rem;
 
   &--title {
