--- a/src/components/GoOrder/styles.scss
+++ b/src/components/GoOrder/styles.scss
@@ -25,6 +25,7 @@
         gap: 0.5rem;
         text-decoration: none;
         font-size: 1.8rem;
+        cursor: not-allowed;
       }
       .active {
         padding-bottom: 3px;
