--- a/src/components/PendingOrderCart/styles.scss
+++ b/src/components/PendingOrderCart/styles.scss
@@ -121,6 +121,12 @@
     z-index: 2;
     background-color: rgb(119, 198, 201);
 
+    button:disabled {
+      background-color: gray;
+      &:hover {
+        box-shadow: none;
+      }
+    }
     .sub,
     .sub-price {
       color: #5b5a5e;
