--- a/src/components/PersonalClens/PersonalClensCard/styles.scss
+++ b/src/components/PersonalClens/PersonalClensCard/styles.scss
@@ -8,6 +8,7 @@
   box-shadow: 0 13px 25px 0 rgba(0, 0, 0, 0.2), 0 10px 7px 0 rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: all 0.3s ease-in-out;
+  margin-bottom: 3rem;
 
   &__data {
     img {
