--- a/src/components/AdministradorPanel/showInfoORder/styles.scss
+++ b/src/components/AdministradorPanel/showInfoORder/styles.scss
@@ -3,13 +3,22 @@
   border: thin solid #999;
   border-radius: 5px;
   list-style: none;
-  margin: 5px;
-  padding: 5px;
+  width: 100%;
+  padding: 1rem;
 }
 
 .asign-wrapper {
   width: 100%;
   display: flex;
-  gap: 30px;
-  margin: 10px;
+  align-items: center;
+  gap: 1rem;
+  form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .btn {
+    width: 8rem;
+  }
 }
