--- a/src/components/AdministradorPanel/styles.scss
+++ b/src/components/AdministradorPanel/styles.scss
@@ -1,7 +1,40 @@
+.administrator-panel-page {
+  h2 {
+    padding: 2rem 0 1rem 1rem;
+    background-color: #77c6ca;
+    color: white;
+    font-weight: bold;
+    font-size: 2rem;
+  }
+}
+
 .administrator-panel-wrapper {
   padding: 15px;
   list-style: none;
   // width: 350px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+  div {
+    padding: 0 1rem 0 0;
+  }
+}
+
+@media (min-width: 769px) {
+  .administrator-panel-wrapper {
+    padding: 15px;
+    list-style: none;
+    // width: 350px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 1200px) {
+  .administrator-panel-wrapper {
+    padding: 15px;
+    list-style: none;
+    // width: 350px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
