--- a/src/components/GoOrder/Cotiza/styles.scss
+++ b/src/components/GoOrder/Cotiza/styles.scss
@@ -33,7 +33,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 3rem 0 1rem 0;
+  margin: 1rem 0;
   padding-bottom: 1rem;
 
   .control-label {
